# PetMarketplaceSystem

./: .gitignore  AGENTS.md  LICENSE  README.md
backstage/pet_shop/: .gitignore  manage.py  pet_shop_backup.sql  pyproject.toml  pyrightconfig.json  requirements.txt  注意事项.txt
backstage/pet_shop/accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backstage/pet_shop/accounts/migrations/: 0001_initial.py  0002_userprofile_user.py  0003_remove_userprofile_user_userprofile_name.py  0004_remove_userprofile_name_userprofile_username.py  0005_remove_userprofile_password_and_more.py
backstage/pet_shop/api/: models.py  permissions.py  serializers.py  urls.py  views.py
backstage/pet_shop/api/utils/: code.py  (+1 more)
backstage/pet_shop/charts/: admin.py  apps.py  models.py  urls.py  views.py
backstage/pet_shop/commodity/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backstage/pet_shop/customer/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backstage/pet_shop/customer_operation/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backstage/pet_shop/data/: china-regions.json
backstage/pet_shop/index/: urls.py  views.py
backstage/pet_shop/merchant/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backstage/pet_shop/pet_shop/: __init__.py  authentication.py  regions.py  settings.py  urls.py  wsgi.py
backstage/pet_shop/trade/: admin.py  api_views.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+137 files in other folders)
